samples/_failures_safe/1761124646_1de78a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a05fc3c1.c: In function ‘main’:
./samples/SAFE/__tmp_a05fc3c1.c:136:12: error: missing terminating " character
  136 |     printf("Enter 4 values for
      |            ^~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a05fc3c1.c:136:5: error: expected expression at end of input
  136 |     printf("Enter 4 values for
      |     ^~~~~~
./samples/SAFE/__tmp_a05fc3c1.c:136:5: error: expected declaration or statement at end of input
